--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-   <title> Welcome to Andrija's Website! </title>
+   <title> Andrija's Github Website </title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <p><strong>Welcome to my website!</strong></p>
   </body>
 </html>
