--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
+   <body bgcolor="#03F7FF">
    <title> Andrija's Github Website </title>
   </head>
   <body>
     <p> <strong>Welcome to my website!</strong> </p>
-  </body>
-</html>
+    <img src="obi wan gif.gif">
+              
