--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
   </head>
   <body>
     <p> <strong>Welcome to my website!</strong> </p>
-    <img src="obi wan gif.gif">
+    <img src="obiwan.gif">
               
