--- a/index.html
+++ b/index.html
@@ -6,5 +6,4 @@
   </head>
   <body>
     <p> <strong>Welcome to my website!</strong> </p>
-    <img src="obiwan.gif">
-              
+    <img src=”obiwan.gif” alt=”animated” />
