--- a/index.html
+++ b/index.html
@@ -6,4 +6,7 @@
   </head>
   <body>
     <p> <strong>Welcome to my website!</strong> </p>
+    <a href="index.html">Home</a>
+    <a href="portfolio.html">My Portfolio</a>
+    <a href="aboutme.html">All About Me</a>
     <iframe src="https://giphy.com/embed/Nx0rz3jtxtEre" width="480" height="240" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/mrw-top-escalator-Nx0rz3jtxtEre">via GIPHY</a></p>
