--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
     <p> <strong>Welcome to my website!</strong> </p>
     <a href="index.html">Home</a>
     <a href="portfolio.html">My Portfolio</a>
-    <a href="aboutme.html">All About Me</a>
+    <a href="aboutme.html">All About Me</a> <br />
     <iframe src="https://giphy.com/embed/Nx0rz3jtxtEre" width="480" height="240" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/mrw-top-escalator-Nx0rz3jtxtEre">via GIPHY</a></p>
