--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@
       <a href="index.html">Home</a>
       <a href="portfolio.html">My Portfolio</a>
       <a href="aboutme.html">All About Me</a> <br />
-    
+    <img src="resources/obiwan.gif">
