--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <title> Andrija's Github Website </title>
   </head>
   <body>
-    <p> <align "center"> </p>
+    <p align "center" /p>
      <p> <font size="16"> <strong>Welcome to my website!</strong> </p>
       <a href="index.html">Home</a>
       <a href="portfolio.html">My Portfolio</a>
