--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <title> Andrija's Github Website </title>
   </head>
   <body>
-     <p> <font size="16"> <style="text-align:center;"> <strong>Welcome to my website!</strong> </p>
+     <p> <font size="16"> <p style="text-align:center;"> <strong>Welcome to my website!</strong> </p>
       <a href="index.html">Home</a>
       <a href="portfolio.html">My Portfolio</a>
       <a href="aboutme.html">All About Me</a> <br />
