--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
      <p style="text-align:center;" <font size="16"> <strong>Welcome to my website!</strong> 
        <a href="index.html">Home</a>  
        <a href="portfolio.html">My Portfolio</a> 
-       <a href="aboutme.html">All About Me</a> </p>
+       <a href="aboutme.html">All About Me</a> 
+    </p>
        <br />
     <img src="resources/obiwan.gif" width=1000>
