--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
    <title> Andrija's Github Website </title>
   </head>
   <body>
-     <p style="text-align:center;" <font size="16"> <strong>Welcome to my website!</strong> 
+     <p style="text-align:center;" font size="16" <strong>Welcome to my website!</strong> </p>
        <a href="index.html">Home</a>  
        <a href="portfolio.html">My Portfolio</a> 
        <a href="aboutme.html">All About Me</a> 
-    </p>
+    
        <br />
     <img src="resources/obiwan.gif" width=1000>
