--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <title> Andrija's Github Website </title>
   </head>
   <body>
-     <p style="text-align:center;" font size="16" <strong>Welcome to my website!</strong> </p>
+     <p style="text-align:center;" <p font size="28" <strong>Welcome to my website!</strong> </p>
        <a href="index.html">Home</a>  
        <a href="portfolio.html">My Portfolio</a> 
        <a href="aboutme.html">All About Me</a> 
