--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
    <body bgcolor="#03F7FF">
    <title> Andrija's Github Website </title>
   </head>
-  <body>
+    <body>
      <p font size="28" <p style="text-align:center;"> <strong>Welcome to my website!</strong> </p>
      <a href="index.html">Home</a>  
      <a href="portfolio.html">My Portfolio</a> 
      <a href="aboutme.html">All About Me</a> 
      <img src="resources/obiwan.gif" width=1000> 
+    </body>
