--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
    <title> Andrija's Github Website </title>
   </head>
     <body>
-     <p font size="28" <p style="text-align:center;"> <strong>Welcome to my website!</strong> </p>
+     <p font size="28" <p style="text-align:center;"> <strong>Welcome to my website!</strong> 
      <a href="index.html">Home</a>  
      <a href="portfolio.html">My Portfolio</a> 
      <a href="aboutme.html">All About Me</a> 
      <img src="resources/obiwan.gif" width=1000> 
+     </p>
     </body>
