--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
    <title> Andrija's Github Website </title>
   </head>
     <body>
-     <p font size="28" <p style="text-align:center;"> <strong>Welcome to my website!</strong> 
+     <p font size="28" <p style="text-align:center;"> <strong>Welcome to my website!</strong> </p>
+    <br>
      <a href="index.html">Home</a>  
      <a href="portfolio.html">My Portfolio</a> 
      <a href="aboutme.html">All About Me</a> 
+    <br>
      <img src="resources/obiwan.gif" width=1000> 
-     </p>
+     
     </body>
