--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
    <title> Andrija's Github Website </title>
   </head>
     <body>
-     <p font size="28" <p style="text-align:center;"> <strong>Welcome to my website!</strong> </p>
+     <center>
+     <p font size="28" <strong>Welcome to my website!</strong> </p>
     <br>
      <a href="index.html">Home</a>  
      <a href="portfolio.html">My Portfolio</a> 
