--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
      <a href="aboutme.html">All About Me</a> 
     <br>
      <img src="resources/obiwan.gif" width=1000> 
-     
+    </center>
     </body>
