--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
     <body>
      <center>
-     <p font size="45" <strong>Welcome to my website!</strong> </p>
+     <font face = "Comic sans MS" size =" 5">Comic Sans MS</font><br />
+     <p <strong>Welcome to my website!</strong> </p>
     <br>
      <a href="index.html">Home</a>  
      <a href="portfolio.html">My Portfolio</a> 
