--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   </head>
     <body>
      <center>
-     <font face = "Comic sans MS" size =" 5">Comic Sans MS</font><br />
-     <p <strong>Welcome to my website!</strong> </p>
+      <p <font face = "Comic sans MS" size =" 5">Comic Sans MS</font><br /> <strong>Welcome to my website!</strong> </p>
     <br>
-     <a href="index.html">Home</a>  
-     <a href="portfolio.html">My Portfolio</a> 
-     <a href="aboutme.html">All About Me</a> 
+      <a href="index.html">Home</a>  
+      <a href="portfolio.html">My Portfolio</a> 
+      <a href="aboutme.html">All About Me</a> 
     <br>
      <img src="resources/obiwan.gif" width=1000> 
     </center>
