--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
     <body>
      <center>
-      <p <font face = "Comic sans MS" size =" 5">Comic Sans MS</font><br /> <strong>Welcome to my website!</strong> </p>
+      <p >Comic Sans MS</font> <strong>Welcome to my website!</strong> </p>
     <br>
       <a href="index.html">Home</a>  
       <a href="portfolio.html">My Portfolio</a> 
