--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
     <body>
      <center>
-      <p >Comic Sans MS</font> <strong>Welcome to my website!</strong> </p>
+       <font face = "Welcome to my website!" size =" 10">Comic Sans MS</font><br />
     <br>
       <a href="index.html">Home</a>  
       <a href="portfolio.html">My Portfolio</a> 
