--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   </head>
     <body>
      <center>
-       <font face = "Welcome to my website!" size =" 10">Comic Sans MS</font><br />
+      <p><font face = "Comic Sans MS" size =" 10"> 
+        Welcome to my website!
+        </font>
+       </p>
     <br>
       <a href="index.html">Home</a>  
       <a href="portfolio.html">My Portfolio</a> 
