--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
     <body>
      <center>
-      <p><font face = "Comic Sans MS" size =" 10"> 
+      <font face = "Comic sans MS" size =" 10"> Comic sans title yay</font> 
         Welcome to my website!
         </font>
        </p>
