--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   </head>
     <body>
      <center>
-      <font face = "Comic sans MS" size =" 10"> Comic sans title yay</font> 
-        Welcome to my website!
-        </font>
+      <font face = "Comic sans MS" size =" 10"> Welcome to my website! </font>
        </p>
     <br>
       <a href="index.html">Home</a>  
