--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       <font face = "Comic sans MS" size =" 10"> Welcome to my website! </font>
        </p>
     <br>
-      <a href="index.html">Home</a>  
+      <a href="index.html">
+        <font face = "Comic sans MS" size =" 10"> Home </font> </a>  
       <a href="portfolio.html">My Portfolio</a> 
       <a href="aboutme.html">All About Me</a> 
     <br>
