--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <br>
       <a href="index.html">
         <font face = "Comic sans MS" size =" 10"> Home </font> </a>  
-      <a href="portfolio.html">My Portfolio</a> 
-      <a href="aboutme.html">All About Me</a> 
+      <a href="portfolio.html">
+        <font face = "Comic sans MS" size =" 10"> My Portfolio </font> </a> 
+      <a href="aboutme.html">
+        <font face = "Comic sans MS" size =" 10"> All About Me </font> </a> 
     <br>
      <img src="resources/obiwan.gif" width=1000> 
     </center>
