--- a/pages/about me.html
+++ b/pages/about me.html
@@ -1,1 +1,22 @@
-
+<!doctype html>
+<html lang="en">
+  <head>
+   <body bgcolor="#CF03FF">
+   <title> Andrija's Github Website </title>
+  </head>
+    <body>
+     <center>
+      <font face = "Comic sans MS" size =" 10"> Welcome to my website! </font>
+       </p>
+    <br>
+      <a href="../../index.html">
+        <font face = "Comic sans MS" size =" 10"> Home </font> </a> 
+      <br>
+      <a href="../portfolio.html">
+        <font face = "Comic sans MS" size =" 10"> My Portfolio </font> </a> 
+      <br>
+      <a href="../aboutme.html">
+        <font face = "Comic sans MS" size =" 10"> All About Me </font> </a> 
+      <br>
+    </center>
+    </body>
