--- a/pages/about me.html
+++ b/pages/about me.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-   <body bgcolor="#CF03FF">
+   <body bgcolor="#FF4503">
    <title> Andrija's Github Website </title>
   </head>
     <body>
