--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -12,10 +12,10 @@
       <a href="../../index.html">
         <font face = "Comic sans MS" size =" 10"> Home </font> </a> 
       <br>
-      <a href="portfolio.html">
+      <a href="../portfolio.html">
         <font face = "Comic sans MS" size =" 10"> My Portfolio </font> </a> 
       <br>
-      <a href="aboutme.html">
+      <a href="../aboutme.html">
         <font face = "Comic sans MS" size =" 10"> All About Me </font> </a> 
       <br>
     </center>
