--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -18,5 +18,6 @@
       <a href="../aboutme.html">
         <font face = "Comic sans MS" size =" 10"> All About Me </font> </a> 
       <br>
+      <img src="lightbot.jfif" width="450">
     </center>
     </body>
