--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -18,6 +18,6 @@
       <a href="aboutme.html">
         <font face = "Comic sans MS" size =" 10"> All About Me </font> </a> 
       <br>
-      <img src="resources/lightbot.jfif"> width="1000"
+      <img src="resources/lightbot.jfif" width="1000">
     </center>
     </body>
