--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -15,7 +15,7 @@
       <a href="portfolio.html">
         <font face = "Comic sans MS" size =" 10"> My Portfolio </font> </a> 
       <br>
-      <a href="https://randrija.github.io/pages/aboutme.html">
+      <a href="../aboutme.html">
         <font face = "Comic sans MS" size =" 10"> All About Me </font> </a> 
       <br>
       <img src="lightbot.jfif" width="450">
