--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -18,6 +18,6 @@
       <a href="https://randrija.github.io/pages/aboutme.html">
         <font face = "Comic sans MS" size =" 10"> All About Me </font> </a> 
       <br>
-      <img src="resources/lightbot.jpg" width="1000">
+      <img src="resources/lightbot.jpg" width=1000>
     </center>
     </body>
