--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -19,6 +19,8 @@
         <font face = "Comic sans MS" size =" 10"> All About Me </font> </a> 
       <br>
       <img src="../resources/lightbot.jpg" width=1000>
-      <font face = "Comic Sans MS" size =" 2"> The first thing in Computer Science we did was play the Lightbot game. It was a very fun coding game where the objective was to input code such that the robot hops, turns, or walks into a certain spot and lights up. </font> </a>
+      <br>
+      <font face = "Comic Sans MS" size =" 2"> The first thing in Computer Science we did was play the Lightbot game. 
+        It was a very fun coding game where the objective was to input code such that the robot hops, turns, or walks into a certain spot and lights up. </font> </a>
     </center>
     </body>
