--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -22,5 +22,9 @@
       <br>
       <font face = "Comic Sans MS" size =" 5"> The first thing in Computer Science we did was play the Lightbot game. 
         It was a very fun coding game where the objective was to input code such that the robot hops, turns, or walks into a certain spot and lights up. </font> </a>
+      <br>
+      <iframe height="400px" width="100%" src="https://repl.it/@ChristinaS50087/Interactive-Fiction-10?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+      <br>
+      <font face = "Comic Sans MS" size =" 5"> This is my Interactive Fiction project that I did with my partner Christina. It starts in North Korea on a citizen named Mal-Chin who decides he wants to go to America and try the In-N-Out burger. The player has to make desicions that either evade him from capture or furthur his progress in getting the burger.
      </center>
     </body>
